# bus-eta-notifier

./: .envrc  .gitignore  LICENSE  README.md  package.json  shell-init.sh  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs
src/app/: page.tsx
src/app/components/: MonitoredStop.tsx
