[package]
name = "app"
version = "0.1.0"
description = "ETA Bus"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/su-z/bus-eta-notifier.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2"
regex-macro = "0.3.0"
lazy_static = "1.5.0"
regex = "1.11.1"
url = "2.5.4"

[features]

